unpackaged/main/default/objects/pse__Vendor_Invoice__c/pse__Vendor_Invoice__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__VendorInvoiceHelp</customHelpPage>
    <description>This object enables your vendors to proactively manage their own invoices through a partner portal, including logging time and entering expenses against projects. Vendor invoices must be in their project currency. However, they can be set up to specify a vendor currency so every child vendor invoice item can be converted by date and summed up to a vendor amount.</description>
    <label>Vendor Invoice</label>
    <nameField>
        <displayFormat>INV-{YYYY}-{MM}-{DD}-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>