unpackaged/main/default/objects/pse__Vendor_Invoice__c/fields/link_VIPCN_State__c.field-meta.xml
<CustomField>
    <fullName>link_VIPCN_State__c</fullName>
    <label>Payable Credit Note Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>