unpackaged/main/default/objects/pse__Vendor_Invoice__c/fields/link_VIPIN_Errors__c.field-meta.xml
<CustomField>
    <fullName>link_VIPIN_Errors__c</fullName>
    <description>Details of any errors that occurred during the Foundations messaging process. This field is automatically generated when activating link control. Values are automatically populated during message delivery.</description>
    <inlineHelpText>Details of errors that occurred when updating the linked record.</inlineHelpText>
    <label>Payable Invoice Errors</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>