unpackaged/main/default/objects/pse__Vendor_Invoice__c/fields/pse__Action_Recalc_Vendor_Currency_Amount__c.field-meta.xml
<CustomField>
    <fullName>pse__Action_Recalc_Vendor_Currency_Amount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if checked, un-checks itself and forces re-population/calculation of Vendor Currency Amount Number values on all child Vendor Invoice Items, thereby updating the Vendor Currency Total formula value.</description>
    <label>Action: Recalc Vendor Currency Amount</label>
    <type>Checkbox</type>
</CustomField>