unpackaged/main/default/objects/pse__Vendor_Invoice__c/fields/pse__Approved_for_Payment__c.field-meta.xml
<CustomField>
    <fullName>pse__Approved_for_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the invoice has been approved for payment</description>
    <label>Approved for Payment</label>
    <type>Checkbox</type>
</CustomField>