unpackaged/main/default/objects/pse__Vendor_Invoice__c/fields/pse__Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>The date of the invoice</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>