unpackaged/main/default/objects/pse__Vendor_Invoice__c/fields/pse__Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>pse__Invoice_Number__c</fullName>
    <description>A unique id field for the invoice</description>
    <externalId>true</externalId>
    <label>Invoice Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>