unpackaged/main/default/objects/pse__Vendor_Invoice__c/fields/pse__Last_Item_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Last_Item_Date__c</fullName>
    <description>A calculated field that shows the latest vendor invoice item date.</description>
    <label>Last Item Date</label>
    <summarizedField>pse__Vendor_Invoice_Item__c.pse__Date__c</summarizedField>
    <summaryForeignKey>pse__Vendor_Invoice_Item__c.pse__Vendor_Invoice__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>