unpackaged/main/default/objects/pse__Vendor_Invoice__c/fields/pse__Target_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Target_Payment_Date__c</fullName>
    <description>The target date for payment</description>
    <label>Target Payment Date</label>
    <type>Date</type>
</CustomField>