unpackaged/main/default/objects/pse__Vendor_Invoice__c/fields/pse__Vendor_Currency_Total__c.field-meta.xml
<CustomField>
    <fullName>pse__Vendor_Currency_Total__c</fullName>
    <formula>pse__Vendor_Currency__c+' '+TEXT(pse__Vendor_Currency_Total_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Currency Total</label>
    <type>Text</type>
</CustomField>