unpackaged/main/default/objects/pse__Vendor_Invoice__c/fields/pse__Vendor_VAT__c.field-meta.xml
<CustomField>
    <fullName>pse__Vendor_VAT__c</fullName>
    <label>Vendor VAT#</label>
    <length>50</length>
    <type>Text</type>
</CustomField>