unpackaged/main/default/objects/pse__Vendor_Invoice__c/validationRules/pse__Account_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Account_Required</fullName>
    <active>true</active>
    <description>Account Field is Required (Always)</description>
    <errorConditionFormula>OR(ISNULL(pse__Account__c),ISBLANK(pse__Account__c))</errorConditionFormula>
    <errorDisplayField>pse__Account__c</errorDisplayField>
    <errorMessage>Account is required.</errorMessage>
</ValidationRule>