unpackaged/main/default/objects/pse__Vendor_Invoice__c/validationRules/pse__Account_required_and_constant.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Account_required_and_constant</fullName>
    <active>false</active>
    <errorConditionFormula>OR(ISCHANGED(pse__Account__c),LEN(pse__Account__c)=0)</errorConditionFormula>
    <errorDisplayField>pse__Account__c</errorDisplayField>
    <errorMessage>Account is required and cannot be changed once set</errorMessage>
</ValidationRule>