unpackaged/main/default/objects/pse__Vendor_Invoice__c/validationRules/pse__Currency_is_constant.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Currency_is_constant</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNEW()),ISCHANGED(CurrencyIsoCode))</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>Currency cannot be changed once set</errorMessage>
</ValidationRule>