unpackaged/main/default/objects/pse__Vendor_Invoice__c/listViews/pse__All.listView-meta.xml
<ListView>
    <fullName>pse__All</fullName>
    <columns>NAME</columns>
    <columns>pse__Account__c</columns>
    <columns>pse__Description__c</columns>
    <columns>pse__Date__c</columns>
    <columns>pse__Invoice_Number__c</columns>
    <columns>pse__PO_WO_Number__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Total__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>